third commit, laptop to desktop, in useradd stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,12 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "chrono": "cpp",
+        "ctime": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "string_view": "cpp",
+        "thread": "cpp"
     }
 }
