cannot code change password

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             //"program": "/media/new4tbhd/defaultsync/CSCE689/AFIT-CSCE689-HW2-S/src/tcpserver", //for tcpserver
             //"args": ["-a 127.0.0.1", "-p 1111"], //for tcpserver
             "program": "/media/new4tbhd/defaultsync/CSCE689/AFIT-CSCE689-HW2-S/src/my_adduser", //for my_adduser
-            "args": ["bob"], //for my_adduser
+            "args": ["test1"], //for my_adduser
             "stopAtEntry": false,
             "cwd": "/",
             "environment": [],
